syntax = "proto3";

// Not using packages for now, for simplicity, but this is what it would look like:
package com.bunny.v1;

service CustomerService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

message GetAllRequest {}

message GetRequest {
  string id = 1;
}

message GetAllResponse {
  repeated Customer customers = 1;
}

message GetResponse {
  Customer customer = 1;
}

message Customer {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
}
